# compute_cpp_test

./: CMakeLists.txt  README.md  main.cpp
cmake/Modules/: FindComputeCpp.cmake
core/model/: Particle.cpp  Particle.h
samples/: simple_add.cpp
